Change favicon, support spacing issues, and added twiter/discord links

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -418,6 +418,10 @@
             flex-direction: column;
             align-items: center;
 
+            .placeholder-img {
+              width: 60%;
+            }
+
             .secondary-text,
             a {
               margin-top: 10px;
@@ -614,10 +618,6 @@
         margin-top: calc(30%);
       }
 
-      .left-column {
-        margin-top: 400px;
-      }
-
       img {
         width: 100%;
         max-width: 100%;
@@ -656,6 +656,12 @@
             font-size: 13px;
             text-decoration: underline;
           }
+        }
+      }
+
+      @media screen and (min-width: $tab-port) {
+        .left-column {
+          margin-top: 400px;
         }
       }
     }
